--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 
-Project(PathTracing)
+Project(VariousSmallpt)
 
 add_subdirectory(smallpt)
 add_subdirectory(ismallpt)
+add_subdirectory(ismallpte)
