feat：使用svpng输出Png图片代替PPM格式

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.6)
 
 Project(VariousSmallpt)
 
+include_directories(external/svpng)
+
 add_subdirectory(smallpt)
 add_subdirectory(ismallpt)
 add_subdirectory(ismallpte)
